@@ -66,6 +66,18 @@ Info: The package installs files into the <tt>/etc/rc.d</tt> or
  <tt>/etc/rc?.d</tt> which is not allowed.
 Ref: policy 9.3.3
 
+Tag: package-install-ieee-data
+Severity: important
+Certainty: possible
+Ref: #785662
+Info: Debian package should not install ieee oui.txt or iab.txt file
+ These files are shipped in the package ieee-data and package should
+ depends on the ieee-data instead of shipping these files.
+ .
+ Package should symlinks to /usr/share/ieee-data/iab.txt or
+ /usr/share/ieee-data/oui.txt. Moreover, you should also
+ depends on ieee-data package.
+
 Tag: package-install-apt-preferences
 Severity: serious
 Certainty: possible
