@@ -1,0 +1,6 @@
+Testname: files-ieee-data
+Sequence: 6000
+Version: 1.0
+Description: Check for different ieee data install
+Test-For:
+ package-install-ieee-data
